# 3dstool

./: CMakeLists.txt  LICENSE  README.md
cmake/: AddCompilationFlags.cmake  AddDep.cmake  AddTarget.cmake  AutoFiles.cmake
dep/include/WIN32/openssl/: opensslconf.h
dep/include/linux_x86_32/openssl/: opensslconf.h
dep/include/linux_x86_64/openssl/: opensslconf.h
dep/include/mac_x86_32/openssl/: opensslconf.h
dep/include/mac_x86_64/openssl/: opensslconf.h
dep/include/macos_x86_32/curl/: curlbuild.h  curlver.h
dep/include/macos_x86_32/openssl/: opensslconf.h
dep/include/macos_x86_64/curl/: curlbuild.h
dep/include/macos_x86_64/openssl/: opensslconf.h
dep/include/windows_x86_32/openssl/: opensslconf.h
dep/include/windows_x86_64/openssl/: opensslconf.h
dep/lib/WIN32/: libeay32.lib
dep/lib/WIN64/: libeay32.lib
dep/lib/windows_x86_32/: libcurl.lib  libssl.lib
dep/lib/windows_x86_32_msvc14/: libcurl.lib  libssl.lib
dep/lib/windows_x86_64/: libcurl.lib  libssl.lib
dep/lib/windows_x86_64_msvc14/: libcurl.lib  libssl.lib
dep/src/capstone/msvc/: stdint.h
dep/src/curl/: CMakeLists-MSVC.txt  CMakeLists.txt  make_linux_x86_32.sh  make_linux_x86_64.sh  make_mac_x86_32.sh  make_mac_x86_64.sh  make_macos_x86_32.sh  make_macos_x86_64.sh  make_windows_x86_32.bat  make_windows_x86_32_msvc14.bat  make_windows_x86_64.bat  make_windows_x86_64_msvc14.bat  version.txt
dep/src/curl-7.49.0/: CHANGES  Makefile.in
dep/src/curl-7.49.0/docs/: Makefile.in
dep/src/curl-7.49.0/docs/libcurl/: Makefile.in  libcurl-symbols.3
dep/src/curl-7.49.0/docs/libcurl/opts/: CURLOPT_CONNECT_TO.html
dep/src/curl-7.49.0/lib/: Makefile.in  Makefile.vc10  Makefile.vc11  Makefile.vc12  Makefile.vc14  Makefile.vc7  Makefile.vc8  Makefile.vc9  libcurl.plist
dep/src/curl-7.49.0/projects/Windows/VC10/lib/: libcurl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC10/src/: curl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC11/lib/: libcurl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC11/src/: curl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC12/lib/: libcurl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC12/src/: curl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC14/lib/: libcurl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC14/src/: curl.vcxproj
dep/src/curl-7.49.0/projects/Windows/VC6/lib/: libcurl.dsp
dep/src/curl-7.49.0/projects/Windows/VC6/src/: curl.dsp
dep/src/curl-7.49.0/projects/Windows/VC7.1/lib/: libcurl.vcproj
dep/src/curl-7.49.0/projects/Windows/VC7.1/src/: curl.vcproj
dep/src/curl-7.49.0/projects/Windows/VC7/lib/: libcurl.vcproj
dep/src/curl-7.49.0/projects/Windows/VC7/src/: curl.vcproj
dep/src/curl-7.49.0/projects/Windows/VC8/lib/: libcurl.vcproj
dep/src/curl-7.49.0/projects/Windows/VC8/src/: curl.vcproj
dep/src/curl-7.49.0/projects/Windows/VC9/lib/: libcurl.vcproj
dep/src/curl-7.49.0/projects/Windows/VC9/src/: curl.vcproj
dep/src/curl-7.49.0/src/: tool_hugehelp.c  tool_version.h
dep/src/curl-7.49.0/tests/: Makefile.in
dep/src/curl-7.49.0/tests/data/: Makefile.in
dep/src/curl-7.53.1/: CHANGES  Makefile.in  configure
dep/src/curl-7.53.1/docs/: Makefile.in  curl.1
dep/src/curl-7.53.1/docs/cmdline-opts/: Makefile.in
dep/src/curl-7.53.1/docs/libcurl/: libcurl-symbols.3
dep/src/curl-7.53.1/docs/libcurl/opts/: Makefile.in
dep/src/curl-7.53.1/lib/: Makefile.vc10  Makefile.vc11  Makefile.vc12  Makefile.vc14  Makefile.vc7  Makefile.vc8  Makefile.vc9  libcurl.plist
dep/src/curl-7.53.1/src/: Makefile.in  tool_hugehelp.c  tool_version.h
dep/src/curl-7.53.1/tests/: Makefile.in
dep/src/curl-7.53.1/tests/data/: Makefile.in
dep/src/curl-7.53.1/tests/libtest/: Makefile.in
dep/src/curl-7.53.1/tests/unit/: Makefile.in
dep/src/curl-7.68.0/docs/: curl.1
dep/src/curl-7.68.0/src/: tool_hugehelp.c
dep/src/openssl/: _make_VC-WIN32.bat  _make_VC-WIN64A.bat  _make_darwin64_x86_64.sh  _make_darwin_i386.sh  _make_linux_i386.sh  _make_linux_x86_64.sh  make_linux_x86_32.sh  make_linux_x86_64.sh  make_mac_x86_32.sh  make_mac_x86_64.sh  make_macos_x86_32.sh  make_macos_x86_64.sh  make_windows_x86_32.bat  make_windows_x86_32_msvc14.bat  make_windows_x86_64.bat  make_windows_x86_64_msvc14.bat  openssl.txt  version.txt
dep/src/openssl-1.0.1j/: MINFO  Makefile
dep/src/openssl-1.0.1j/crypto/: buildinf.h
dep/src/openssl-1.0.1j/ms/: nt.mak  ntdll.mak  version32.rc
dep/src/openssl-1.0.1j/out32dll/: 4758cca.exp  4758cca.lib  aep.exp  aep.lib  atalla.exp  atalla.lib  capi.exp  capi.lib  chil.exp  chil.lib  cswift.exp  cswift.lib  gmp.exp  gmp.lib  gost.exp  gost.lib  libeay32.exp  libeay32.lib  nuron.exp  nuron.lib  padlock.exp  padlock.lib  ssleay32.exp  ssleay32.lib  sureware.exp  sureware.lib  ubsec.exp  ubsec.lib
dep/src/openssl-1.0.1j/tmp32dll/: aesni-sha1-x86_64.asm  aesni-x86_64.asm  junk.exp  junk.lib  libeay32.res  sha1-x86_64.asm  ssleay32.res
src/: 3dscrypt.cpp  3dscrypt.h  3dstool.cpp  3dstool.h  CMakeLists.txt  backwardlz77.cpp  backwardlz77.h  banner.cpp  banner.h  bignum.cpp  bignum.h  code.cpp  code.h  exefs.cpp  exefs.h  extendedheader.h  huffman.cpp  huffman.h  lz77.cpp  lz77.h  ncch.cpp  ncch.h  ncsd.cpp  ncsd.h  patch.cpp  patch.h  romfs.cpp  romfs.h  runlength.cpp  runlength.h  space.cpp  space.h  url_manager.cpp  url_manager.h  utility.cpp  utility.h  yaz0.cpp  yaz0.h
