AUTO_FILES("." "src" "\\.(cpp|h)$")
if(MSVC_VERSION LESS 1600)
  AUTO_FILES("${ROOT_SOURCE_DIR}/dep/src/capstone/msvc" "src" "\\.h$")
endif()
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/src/capstone-4.0.1/include" "src" "\\.h$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/src/capstone-4.0.1" "src" "capstone-4.0.1/[^/]+\\.(c|h)$")
AUTO_FILES("${ROOT_SOURCE_DIR}/dep/src/capstone-4.0.1/arch/ARM" "src" "\\.(c|h|inc)$")
include_directories(${DEP_INCLUDE_DIR} "${ROOT_SOURCE_DIR}/dep/src/capstone-4.0.1/include")
if(MSVC_VERSION LESS 1600)
  include_directories("${ROOT_SOURCE_DIR}/dep/src/capstone/msvc")
endif()
link_directories(${DEP_LIBRARY_DIR})
add_definitions(-DSDW_MAIN -DCURL_STATICLIB -DCAPSTONE_USE_SYS_DYN_MEM -DCAPSTONE_HAS_ARM)
if(APPLE)
  add_definitions(-DSDW_XCONVERT)
endif()
if(MSVC)
  string(REPLACE "/MDd" "" CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG}")
  set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} /MTd")
  string(REPLACE "/MD" "" CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL}")
  set(CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL} /MT")
  string(REPLACE "/MD" "" CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
  set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} /MT")
  string(REPLACE "/MD" "" CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
  set(CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO} /MT")
endif()
ADD_EXE(3dstool "${src}")
if(WIN32)
  if(MSVC)
    target_link_libraries(3dstool libeay32 libcurl WS2_32 Crypt32)
    set_target_properties(3dstool PROPERTIES LINK_FLAGS_DEBUG "/NODEFAULTLIB:LIBCMT")
  else()
    target_link_libraries(3dstool curl crypto)
  endif()
else()
  target_link_libraries(3dstool curl ssl crypto)
  if(APPLE OR CYGWIN)
    target_link_libraries(3dstool iconv)
  endif()
endif()
install(TARGETS 3dstool DESTINATION bin)
